--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ span {
 
 .header-section{
     background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
 }
 
 .header-logo{
@@ -101,6 +106,7 @@ span {
     padding: 270px 0;
     position: relative;
     z-index: 9;
+    margin-top: 68px;
 }
 
 .banner-section::after {
