--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ span {
     background-size: cover;
     background-position: center center;
     color: #fff;
-    padding: 270px 0;
+    padding: 200px 0;
     position: relative;
     z-index: 9;
     margin-top: 68px;
@@ -121,7 +121,7 @@ span {
 }
 
 .banner-content h3 {
-    font-size: 20px;
+    font-size: 26px;
     font-weight: 400;
 }
 
@@ -156,10 +156,14 @@ span {
     padding: 50px;
 }
 
-.section-title h2 {
-    font-size: 56px;
+.pricing-table-section .section-title h2 {
+    font-size: 55px;
     font-weight: 500;
     margin-bottom: 30px;
+}
+
+.pricing-table-section .section-title p {
+    font-size: 17px;
 }
 
 .pricing-tables {
@@ -196,6 +200,7 @@ span {
     margin: 40px 0;
     font-size: 48px;
     background: #f5f5f5;
+    transition: .25s;
 }
 
 .p-heading h1 span {
@@ -209,7 +214,7 @@ span {
 }
 
 .p-heading p {
-    font-size: 18px;
+    font-size: 19px;
     line-height: 1.3em;
 }
 
@@ -294,6 +299,10 @@ span {
 
 .newslatter-section {
     padding: 100px 0;
+}
+
+.newslatter-section .section-title p {
+    font-size: 19px;
 }
 
 .newslatter-section .section-title h2 {
@@ -386,6 +395,11 @@ span {
 .feedback-section {
     padding: 100px 0;
     background: #f5f5f5;
+}
+
+.feedback-section .section-title p {
+    font-size: 20px;
+    margin-bottom: 70px;
 }
 
 .section-title h2{
