--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ span {
     background-size: cover;
     background-position: center center;
     color: #fff;
-    padding: 200px 0;
+    padding: 194px 0;
     position: relative;
     z-index: 9;
     margin-top: 68px;
@@ -201,6 +201,7 @@ span {
     font-size: 48px;
     background: #f5f5f5;
     transition: .25s;
+    padding-left: 10px;
 }
 
 .p-heading h1 span {
@@ -387,7 +388,7 @@ span {
 .cs-text p {
     font-size: 18px;
     line-height: 1.7em;
-    margin: 22px 0px;
+    margin: 18px 0px;
 }
 
 /* feedback section */
@@ -492,7 +493,7 @@ span {
 }
 
 .f-user-img img {
-    border: 6px solid rgb(170, 151, 44);
+    border: 7px solid rgb(170, 151, 44);
     width: 80px;
     float: left;
     margin-right: 24px;
