--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ span {
     left: 0;
     width: 100%;
     z-index: 99;
+    border-bottom: 1px solid #e0e2e0;
 }
 
 .header-logo{
@@ -200,7 +201,7 @@ span {
     margin: 40px 0;
     font-size: 48px;
     background: #f5f5f5;
-    transition: .25s;
+    transition: .4s;
     padding-left: 10px;
 }
 
