--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ span {
 /* team section */
 
 .team-section {
-    padding: 100px;
+    padding: 100px 0;
 }
 
 .team-section .section-title h2 {
@@ -271,13 +271,18 @@ span {
 }
 
 .member {
-    width: 23%;
+    width: 23.2%;
     margin-right: 2%;
     background: #fff;
     box-shadow: 3px 4px 30px 0 rgba(98, 120, 223, .2);
     border: 6px double #e6891f;
     box-sizing: border-box;
 }
+
+.member:last-child{
+    margin-right: 0;
+}
+
 .member img {
     width: 100%;
 }
